[package]
name = "os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
vga = "0.2.7"
volatile = "0.4.1"
spin = "0.5.2"
x86_64 = "0.14.6"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
